--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Add-ons for Home Assistant
+name: Various add-ons for Home Assistant
 url: https://github.com/fenio/ha-addons
-maintainer: fenio <https://github.com/fenio>
+maintainer: Bartosz Fenski <bartosz@fenski.pl>
