Fix Dockerfile: use multi-stage build to copy binary from official Docker image

--- a/dlnaproxy/Dockerfile
+++ b/dlnaproxy/Dockerfile
@@ -1,24 +1,16 @@
+# Get dlnaproxy binary from the official image
+FROM ghcr.io/fenio/dlnaproxy:main AS dlnaproxy
+
 ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
 # Install required dependencies
 RUN apk add --no-cache \
     bash \
-    jq \
-    curl
+    jq
 
-# Set dlnaproxy version - using main branch
-ARG TARGETARCH
-
-# Download and install dlnaproxy binary from GitHub releases
-RUN case "${TARGETARCH}" in \
-        "amd64") ARCH="x86_64-unknown-linux-musl" ;; \
-        "arm64") ARCH="aarch64-unknown-linux-musl" ;; \
-        *) echo "Unsupported architecture: ${TARGETARCH}" && exit 1 ;; \
-    esac && \
-    curl -fsSL -o /usr/local/bin/dlnaproxy \
-        "https://github.com/fenio/dlnaproxy/releases/latest/download/dlnaproxy-${ARCH}" && \
-    chmod +x /usr/local/bin/dlnaproxy
+# Copy dlnaproxy binary from the official image
+COPY --from=dlnaproxy /dlnaproxy /usr/local/bin/dlnaproxy
 
 # Copy run script
 COPY run.sh /
