--- a/omni/config.yaml
+++ b/omni/config.yaml
@@ -1,7 +1,7 @@
 name: "Omni"
-description: "Siderolabs Omni v1.4.7 - Kubernetes cluster management platform for Talos Linux"
+description: "Siderolabs Omni - Kubernetes cluster management platform for Talos Linux"
 url: "https://github.com/fenio/ha-addons/tree/main/omni"
-version: "0.0.6"
+version: "1.4.7-ha1"
 slug: "omni"
 init: false
 arch:
