Unify versioning to {upstream}-ha{revision} format

--- a/dlna-proxy/config.yaml
+++ b/dlna-proxy/config.yaml
@@ -1,7 +1,7 @@
 name: "DLNA Proxy"
 description: "Broadcasts SSDP alive messages on behalf of a remote DLNA server, making it discoverable on your local network"
 url: "https://github.com/fenio/dlna-proxy"
-version: "0.0.1"
+version: "0.4.0-ha1"
 slug: "dlna-proxy"
 init: false
 arch:
