--- a/unbound/config.yaml
+++ b/unbound/config.yaml
@@ -1,7 +1,7 @@
 name: "Unbound"
 description: "Unbound recursive DNS resolver"
 url: "https://github.com/fenio/ha-addons/tree/main/unbound"
-version: "0.0.6"
+version: "1.24.2-ha1"
 slug: "unbound"
 init: false
 arch:
